# aws-cost-anomaly-detection-monitors

./: Cargo.toml
.github/workflows/: build.yml
config/: config.yaml
src/: main.rs  monitor.rs
