[package]
name = "aws-simple-anomaly-detection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rusoto_core = "0.48.0"
rusoto_ce = "0.48.0"
rusoto_credential = "0.48.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
